# SkillSpector

./: .env.example  .gitignore  .pre-commit-hooks.yaml  .skillspector-baseline.yaml  BAO_CAO_TOI_UU_HOA.md  CHANGELOG.md  Dockerfile  HUONG_DAN_SU_DUNG.md  README.md  README_zh.md  model_registry.yaml  pyproject.toml  run_scan_with_llm.ps1  skillspector_bridge.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  skillspector.yml
benchmark/: .gitignore  README.md  pyproject.toml
benchmark/benchmark/: __init__.py  auth.py  config.py  db.py  main.py  models.py  runner.py  utils.py
benchmark/benchmark/dataset_handler/: __init__.py  base.py  malskillbench.py
benchmark/queries/: 01_overview.sql  02_metrics_by_category.sql  03_metrics_by_attack_vector.sql  04_metrics_by_corpus.sql  05_recall_by_behavior.sql  06_false_negatives.sql  07_false_positives.sql  08_errors.sql  09_classification_status.sql  10_risk_score_distribution.sql  11_threshold_sweep.sql  12_scan_timing.sql  13_label_coverage.sql  14_top_rules.sql
docs/: AGENT_REVIEW_WORKFLOW.md  DEVELOPMENT.md  OWASP-AST10-COVERAGE.md  PI_EXTENSION.md
docs/plans/: 20260611-detect-whitespace-padding.md  p9-issue20-comment-draft.md
docs/superpowers/: EXPECTED_TEST_FAILURES.md
ntad/: __init__.py
skills/skill-inspector/: README.md  SKILL.md
skills/skillspector-operator/: SKILL.md
tests/: conftest.py  test_mcp_least_privilege.py  test_mcp_tool_poisoning.py  test_multi_skill.py  test_optimization.py  test_state.py
tests/unit/: test_cli.py  (+16 more)
(+131 files in other folders)
